add bookmarklet. remove authors in rss.

--- a/public/bookmarklet.html
+++ b/public/bookmarklet.html
@@ -11,6 +11,10 @@
             <a href="javascript:x=document;a=encodeURIComponent(x.location.href);t=encodeURIComponent(x.title);d=encodeURIComponent(window.getSelection());location.href='http://kodama.heroku.com/new?url='+a+'&title='+t+'&note='+d;">
                 + Kodama
             </a>
+            |
+            <a href="javascript:x=document;a=encodeURIComponent(x.location.href);t=encodeURIComponent(x.title);d=encodeURIComponent(window.getSelection());window.open('http://kodama.heroku.com/new?url='+a+'&title='+t+'&note='+d, '_blank', 'width=550,height=600,resizable=1,scrollbars=1');undefined;">
+                + Kodama (view new window)
+            </a>
         </span>
     </div>
 </body>
